# veritas

./: .gitignore  README.md  example.py  pyproject.toml
examples/: shared-reader-writer.py
src/veritas/: __init__.py  cache.py  core.py  datastructs.py  exceptions.py
tests/: test_core.py
